gcc/testsuite/rust/rustc/ui/suggestions/issue-101421_dg.rs
pub trait Ice {
    fn f(&self, _: ());
}

impl Ice for () {
    fn f(&self, _: ()) {}
}

fn main() {
    ().f::<()>(());
// { dg-error ".E0107." "" { target *-*-* } .-1 }
}

